--- a/style.css
+++ b/style.css
@@ -325,8 +325,9 @@ body{
 
 .haha{
   text-align: center;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   font-size: 40px;
+  margin-top: 100px;
 }
 
 p{
