--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body{
         justify-content: space-between;
         width: 100%;
         padding-top: 0;
+        position: fixed;
         padding-bottom: 0;
     }
 }
@@ -27,6 +28,7 @@ body{
   border-radius: 10px;
   padding: 10px 20px;
   position: fixed;
+  /* position: relative; */
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -162,12 +164,12 @@ body{
   color: white;
   padding: 20px;
   border-radius: 10px;
-  margin-top: 70px;
+  /* margin-top: 70px; */
   /* justify-content: center; */
   /* width: 300px; */
   /* align-items: center; */
-  margin-left: 200px;
-  margin-top: 40px;
+  margin-left: 170px;
+  margin-top: 70px;
   /* text-align: center; */
   box-shadow: 0 4px 8px rgba(0,0,0,0.1);
   width: 900px;
@@ -175,21 +177,23 @@ body{
 }
 
 .h1 {
-  font-size: 1.9em;
-  padding: 3px;
+  font-size: 3.5em;
+  padding: 50px;
   /* margin-top: 100px; */
   display: inline;
   background-color: black;
   margin: 0;
   text-align: center;
+  /* padding-top: 50px; */
   color: #fffc35;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: bold;
 }
 
 .h2{
-    font-size: 1.9em;
-    padding: 3px;
+    font-size: 3.5em;
+   padding: 50px;
+   padding-top: 100px; 
     /* margin-top: 40px; */
   display: inline;
   background-color: black;
@@ -202,8 +206,8 @@ body{
 }
 
 .h3{
-  font-size: 1.9em;
-  padding: 3px;
+  font-size: 3.5em;
+  padding: 50px;
   /* margin-top: 40px; */
   display: inline;
   background-color: black;
@@ -216,8 +220,8 @@ body{
 }
 
 .h4{
-  font-size: 1.9em;
-  padding: 3px;
+  font-size: 3.5em;
+  padding: 50px;
   /* margin-top: 40px; */
   display: inline;
   background-color: black;
@@ -230,13 +234,13 @@ body{
 }
 
 .container{
-  margin-top: 30px;
+  margin-top: 50px;
 }
 
 .h5{
-  font-size: 1.9em;
+  font-size: 3.5em;
   margin-top: 20px;
-  padding: 3px;
+  padding: 50px;
   /* margin-top: 100px; */
   display: inline;
   background-color: black;
@@ -248,9 +252,9 @@ body{
 }
 
 .h6{
-    font-size: 1.9em;
+    font-size: 3.5em;
     margin-top: 20px;
-    padding: 3px;
+   padding: 50px;
     /* margin-top: 40px; */
   display: inline;
   background-color: black;
@@ -263,9 +267,10 @@ body{
 }
 
 .h7{
-  font-size: 1.9em;
+  font-size: 3.5em;
   margin-top: 20px;
-  padding: 3px;
+  padding: 50px;
+  /* padding-left: -10px; */
   /* margin-top: 40px; */
   display: inline;
   background-color: black;
@@ -278,9 +283,9 @@ body{
 }
 
 .h8{
-  font-size: 1.9em;
+  font-size: 3.5em;
   margin-top: 20px;
-  padding: 3px;
+ padding: 50px;
   /* margin-top: 40px; */
   display: inline;
   background-color: black;
