--- a/style.css
+++ b/style.css
@@ -82,7 +82,7 @@ body{
 
 .hero-section {
   background-color: #fff;
-  margin-top: 60px;
+  margin-top: 50px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -1051,15 +1051,14 @@ font-weight: bold;
 }
 
 /* footer */
-
 footer{
   display: flex;
   background-color: #3b3b1e;
   /* width: 1308px; */
   margin-left: -9px;
   width: 1352px;
+  /* height: 200px; */
   margin-top: 250px;
-  height: 500px;
   margin-bottom: -10px;
   /* object-fit: cover; */
 }
@@ -1127,7 +1126,7 @@ footer h3{
   margin-top: 20px;
 }
 
-/* .balls{
+.balls{
   display: flex;
   justify-content: center;
   align-items: center;
@@ -1137,36 +1136,20 @@ footer h3{
   background-color: #fffc35;
   height: 450px;
   width: 550px;
+  /* margin-top: -700px; */
   margin-top: -190px;
   border-radius: 20px;
-  margin-left: -1900px;
-} */
-
-/* .bal{
-  background-color: #3d3d16;
-  height: 450px;
-  width: 550px;
-  margin-top: -190px;
-  border-radius: 20px;
-  margin-left: -30px;
+  margin-left: -1300px;
 }
 
-.ba{
-  background-color: #3d3d16;
-  height: 450px;
-  width: 250px;
-  margin-top: -190px;
-  border-radius: 20px;
-  margin-left: -200px;
-} */
-
-/* .red{
+.red{
     background-color:red;
  height: 250px;
   width: 250px;
   margin-top: 2px;
   border-radius: 155px;
   margin-left: -400px;
+  animation: float 1.5s linear infinite alternate;
 }
 
 .pink{
@@ -1176,6 +1159,7 @@ footer h3{
   margin-top: -px;
   border-radius: 155px;
   margin-left: -28px;
+    animation: float 1.6s linear infinite alternate;
 }
 
 .green{
@@ -1185,202 +1169,84 @@ footer h3{
   margin-top: -332px;
   border-radius: 188px;
   margin-left: -415px;
-} */
-
-@media (min-width: 768px) {
-    .header-container {
-        padding: 10px 25px;
-    }
-    
-    .mobile-menu-toggle {
-        display: none;
-    }
-    
-    .nav-links {
-        gap: 25px;
-        font-size: 1.1rem;
-    }
-    
-    .apply-button {
-        padding: 12px 25px;
-        font-size: 1rem;
-    }
- .hero-title {
-        font-size: 3rem;
-    }
-    
-    .hero-subtitle {
-        font-size: 1.2rem;
-    }
-    
-    .h1, .h2, .h3, .h4, .h5, .h6, .h7, .h8 {
-        font-size: 2.5rem;
-    }
- .Animated {
-        width: 250px;
-    }
-    
-    .haha, .hehe, .smart2, .testimonials-title {
-        font-size: 2.5rem;
-    }
-    
-    .section1, .section2 {
-        justify-content: space-between;
-    }
-    
-    .card1, .card4 {
-        width: 60%;
-    }
-    
-    .card2, .card3 {
-        width: 35%;
-    }
-    
-    .crds {
-        justify-content: space-between;
-    }
-  .crd1, .crd2, .crd3 {
-        width: 30%;
-    }
-    
-    .cd, .cd2 {
-        max-width: 350px;
-    }
-    
-    .process-title {
-        font-size: 1.8rem;
-    }
-    
-    .comment, .coment, .coent, .cont, .cot, .ct, .t, .c, .o {
-        width: 30%;
-    }
-    
-    .footer-transition {
-        flex-direction: row;
-        justify-content: center;
-        align-items: center;
-        gap: 30px;
-    }
-    
-    .hero-illustration {
-        width: 45%;
-        height: 400px;
-    }
-  .container1 {
-        width: 45%;
-        height: 400px;
-    }
+    animation: float 1.5s linear infinite alternate;
 }
 
-@media (min-width: 992px) {
-    .header-container {
-        max-width: 1200px;
-    }
-    
-    .hero-title {
-        font-size: 3.5rem;
-    }
- .h1, .h2, .h3, .h4, .h5, .h6, .h7, .h8 {
-        font-size: 3rem;
-    }
-    
-    .Animated {
-        width: 300px;
-    }
-    
-    .haha, .hehe, .smart2, .testimonials-title {
-        font-size: 3rem;
-    }
-    
-    .card0 {
-        height: 300px;
-    }
- .card1, .card4 {
-        width: 500px;
-    }
-    
-    .card2, .card3 {
-        width: 350px;
-    }
-    
-    .cd, .cd2 {
-        max-width: 350px;
-    }
-    
-    .comment, .coment, .coent, .cont, .cot, .ct, .t, .c, .o {
-        width: 22%;
-    }
-    
-    .hero-illustration {
-        width: 550px;
-        height: 500px;
-    }
- .container1 {
-        width: 550px;
-        height: 470px;
-    }
+@keyframes float {
+    0% { transform: translateY(-30px); }
+    100% { transform: translateY(10px); }
 }
 
-@media (min-width: 1200px) {
-    .hero-section {
-        padding: 100px 0;
-    }
-    
-    .hero-title {
-        font-size: 4rem;
-    }
-    
-    .h1, .h2, .h3, .h4, .h5, .h6, .h7, .h8 {
-        font-size: 3.5rem;
-    }
- .card0 {
-        max-width: 900px;
-        height: 350px;
-    }
+.bal{
+  background-color:  #47471c;
+  height: 450px;
+  width: 300px;
+  margin-top: -190px;
+  /* border-radius: 20px; */
+  margin-left: -0px;
 }
 
-@media (max-width: 375px) {
-    .logo-and-name {
-        font-size: 0.9rem;
-        padding: 6px 10px;
-    }
-    
-    .hero-title {
-        font-size: 2rem;
-    }
-    
-    .hero-button {
-        padding: 10px 20px;
-        font-size: 0.9rem;
-    }
-    
-    .h1, .h2, .h3, .h4, .h5, .h6, .h7, .h8 {
-        font-size: 1.5rem;
-        padding: 10px;
-    }
-    
-  .Animated {
-        width: 120px;
-    }
+.ba{
+  background-color: #47471c;
+  height: 450px;
+  width: 380px;
+  margin-top: -190px;
+  border-radius: 20px;
+  margin-left: -200px;
 }
 
+.hbr{
+   color: #fffc35;
+  border: 2px solid yellow;
+  width: 150px;
+  font-size: 24px;
+  margin-left: -430px;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  text-align: center;
+  justify-content: center;
+  height: 35px;
+  margin-top: -500px;
+  /* margin-top: 290px; */
+}
 
-@media (orientation: landscape) and (max-height: 500px) {
-    .hero-section {
-        padding: 30px 0;
-    }
-    
-    .hero-title {
-        font-size: 2rem;
-    }
-    
-    .hero-subtitle {
-        font-size: 1rem;
-        margin-bottom: 15px;
-    }
-    
-    .hero-button {
-        padding: 8px 20px;
-        font-size: 0.9rem;
-  }
+.rob{
+  font-size: 50px;
+  color: rgb(187, 241, 241);
+  text-align: center;
+   /* margin-left: 430px; */
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  margin-top: -10px;  
+  width: 400px;
+  margin-left: -155px;
+}
+
+.p9{
+  margin-top: 90px;
+  display: flex;
+  margin-left: -395px;
+ font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+ color: rgb(187, 241, 241);
+}
+
+.tomorrow{
+  text-decoration: none;
+  background: rgb(187, 241, 241);
+  margin-top: 180px;
+  color: black;
+  margin-left: -350px;
+  width: 350px;
+  height: 25px;
+  text-align: center;
+  align-items: center;
+  font-weight: bold;
+   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+   /* padding: 2px; */
+   padding-top: 5px;
+   border-radius: 10px;
+}
+
+.tomorrow:hover{
+  color:rgb(0, 66, 0);
+  background-color: #fffc35;
+  font-weight: 900;
 }
